Add neighbor and rename route
