# route.py
@@ -2,34 +2,7 @@ from __future__ import absolute_import
 from __future__ import print_function
 
 
-from datetime import datetime
 import subprocess
-
-
-def get_timestamp():
-    return datetime.now().strftime(("%Y-%m-%d %H:%M:%S"))
-
-# Data to serve with our API
-PEOPLE = {
-    "Farrell": {
-        "fname": "Doug",
-        "lname": "Farrell",
-        "timestamp": get_timestamp()
-    },
-    "Brockman": {
-        "fname": "Kent",
-        "lname": "Brockman",
-        "timestamp": get_timestamp()
-    },
-    "Easter": {
-        "fname": "Bunny",
-        "lname": "Easter",
-        "timestamp": get_timestamp()
-    }
-}
-
-
-
 
 def read():
     """
@@ -39,6 +12,7 @@ def read():
     """
     # Create the list of people from our data
     rst = subprocess.check_output("gobgp g r", shell= True)
+    print (rst)
 
     return rst
 def create(str_para):
